--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Design your shawama!</h1>
 <img th:src="@{/images/shawama.png}"/>
-<form method="POST" th:object="${design}">
+<form method="POST" th:object="${shawama}">
     <div class="grid">
         <div class="ingredient-group" id="wraps">
             <h3>Designate your wrap:</h3>
