--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,6 +16,8 @@
     <input type="password" name="confirm"/><br/>
     <label for="fullName">Full name: </label>
     <input type="text" name="fullName"/><br/>
+    <label for="email">Email: </label>
+    <input type="text" name="email"/><br/>
     <label for="street">Street: </label>
     <input type="text" name="street"/><br/>
     <label for="city">City: </label>
