Fix validation issue

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -12,11 +12,14 @@
 <form method="POST" th:action="@{/logout}">
     <input type="submit" value="Logout"/>
 </form>
-<form method="POST" th:action="@{/orders/current}" th:object="${shawama}" >
+<div th:if="${param.error}">
+    There is error.
+</div>
+<form method="POST" th:object="${shawama}" th:action="@{/design/submit}">
     <div class="grid">
         <div class="ingredient-group" id="wraps">
             <h3>Designate your wrap:</h3>
-            <!--/*@thymesVar id="wrap" type=""*/-->
+
             <div th:each="ingredient : ${wrap}">
                 <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
                 />
