--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Login</h1>
         <img th:src="@{/images/shawama.png}"/>
-        <div th:if="${error}">
+        <div th:if="${param.error}">
             Unable to login. Check your username and password.
         </div>
         <p>New here? Click
